--- a/index.html
+++ b/index.html
@@ -1,10 +1,366 @@
 <!DOCTYPE html>
-<html>
+<html lang="bn">
 <head>
-  <title>আমাদের কৃষি ওয়েবসাইট</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>কোস্টাল এলাকার সবজি ও মশলা উৎপাদন প্রযুক্তি</title>
+<style>
+  body {
+    font-family: 'SolaimanLipi', Arial, sans-serif;
+    line-height: 1.6;
+    background: #f9f9f9;
+    color: #333;
+    margin: 20px;
+  }
+  h1, h2, h3 {
+    color: #2c3e50;
+  }
+  section {
+    background: #fff;
+    margin-bottom: 30px;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+  }
+  ul {
+    margin-left: 20px;
+  }
+</style>
 </head>
 <body>
-  <h1>চাষের বিস্তারিত</h1>
-  <p>মাটি: বেলে-দোঁআশ, সেচ: ৭ দিন পর পর</p>
+
+<h1>কোস্টাল অঞ্চলের সবজি ও মশলা চাষের প্রযুক্তি (বাংলাদেশ)</h1>
+
+<!-- Cucumber -->
+<section id="cucumber">
+  <h2>কাকরোল (Cucumber)</h2>
+  <h3>ভূমিকা</h3>
+  <p>কাকরোল বাংলাদেশের উপকূলীয় এলাকায় গুরুত্বপূর্ণ সবজি হিসেবে চাষ হয়। এটি খাদ্য হিসেবে পুষ্টিকর এবং অর্থনৈতিকভাবে লাভজনক।</p>
+  
+  <h3>জলবায়ু ও মাটি</h3>
+  <p>কাকরোল ভালো জন্মে তাপমাত্রা ২৫-৩৫°C এবং মাঝারি থেকে উর্বর বেলে দোআ মাটিতে। উপকূলীয় অঞ্চলের লবণাক্ত মাটিতেও কিছু লবণসহনশীল জাত সফল।</p>
+  
+  <h3>লবণসহনশীল জাত</h3>
+  <ul>
+    <li>সিসিপি-২</li>
+    <li>বিপি-১</li>
+  </ul>
+  
+  <h3>বপনের সময়</h3>
+  <p>মার্চ থেকে জুন মাসের মধ্যে বপন করা যায়।</p>
+  
+  <h3>বীজ হার</h3>
+  <p>প্রতি হেক্টরে ১.৫ - ২ কেজি বীজ ব্যবহার করা হয়।</p>
+  
+  <h3>সার ব্যবস্থাপনা</h3>
+  <ul>
+    <li>সাধারণত প্রতি হেক্টরে ১৫০ কেজি ইউরিয়া, ১০০ কেজি সিঙ্গল সুপার ফসফেট, ১২০ কেজি পটাশ ব্যবহার করা হয়।</li>
+    <li>খালে মিশিয়ে দেয়া হয় সারের ৫০% ইউরিয়া বাকি বীজ বপনের পরে।</li>
+  </ul>
+  
+  <h3>সেচ</h3>
+  <p>প্রতিদিন নিয়মিত হালকা সেচ প্রয়োজন, বিশেষ করে শারদকালীন সময়ে।</p>
+  
+  <h3>আগাছা নিয়ন্ত্রণ</h3>
+  <p>বপনের ২০-৩০ দিনের মধ্যে আগাছা পরিষ্কার করতে হয়। আগাছা ব্যবস্থাপনায় হাল খোঁড়া ও মুলপতাগুলো পরিষ্কার করা উচিত।</p>
+  
+  <h3>রোগবালাই ও দমন</h3>
+  <ul>
+    <li>পোকার আক্রমণ বেশি থাকে; কীটনাশক প্রয়োগ করা প্রয়োজন।</li>
+    <li>ছত্রাকজনিত রোগের জন্য ফফুন্দরী (ফাঙ্গিসাইড) স্প্রে দিতে হবে।</li>
+  </ul>
+  
+  <h3>সংগ্রহ</h3>
+  <p>বপনের ৫০-৬০ দিনের মধ্যে ফল সংগ্রহ করা যায়। পাকা কাকরোলকে যত তাড়াতাড়ি সম্ভব তোলা উচিত যেন তাজা থাকে।</p>
+</section>
+
+<!-- Pointed Gourd -->
+<section id="pointed-gourd">
+  <h2>শিম (Pointed Gourd)</h2>
+  <h3>ভূমিকা</h3>
+  <p>শিম বা pointed gourd হলো বাংলাদেশের উপকূলীয় অঞ্চলে জনপ্রিয় একটি লতা জাতীয় সবজি, যা প্রচুর খাওয়া হয়।</p>
+  
+  <h3>জলবায়ু ও মাটি</h3>
+  <p>তাপমাত্রা ২৫-৩২°C এবং মাঝারি উর্বর দোআ মাটি এই ফসলের জন্য উপযুক্ত। লবণাক্ত মাটিতেও কিছু পরিমাণে উৎপাদন সম্ভব।</p>
+  
+  <h3>লবণসহনশীল জাত</h3>
+  <ul>
+    <li>স্থানীয় জাত</li>
+    <li>বিপি-৫</li>
+  </ul>
+  
+  <h3>বপনের সময়</h3>
+  <p>মার্চ থেকে জুলাই মাসের মধ্যে বপন করা যায়।</p>
+  
+  <h3>বীজ হার</h3>
+  <p>প্রতি হেক্টরে প্রায় ৫-৬ কেজি বীজ প্রয়োজন।</p>
+  
+  <h3>সার ব্যবস্থাপনা</h3>
+  <ul>
+    <li>প্রতি হেক্টরে ২০০ কেজি গোবর খৈল, ৫০ কেজি ইউরিয়া, ৮০ কেজি সিঙ্গল সুপার ফসফেট, ৪০ কেজি পটাশ দেওয়া হয়।</li>
+  </ul>
+  
+  <h3>সেচ</h3>
+  <p>মাটি আর্দ্র রাখতে সেচ প্রয়োজন। শুষ্ককালে সপ্তাহে ২-৩ বার সেচ দিতে হবে।</p>
+  
+  <h3>আগাছা নিয়ন্ত্রণ</h3>
+  <p>প্রয়োজনে হাত দিয়ে আগাছা পরিষ্কার করতে হবে। রাসায়নিক আগাছা নিয়ন্ত্রণের ক্ষেত্রে প্রয়োজনীয় নির্দেশনা মেনে চলা উচিত।</p>
+  
+  <h3>রোগবালাই ও দমন</h3>
+  <ul>
+    <li>পাতা ঝরা রোগ বেশি দেখা যায়, যেটি ফাঙ্গিসাইড স্প্রে দিয়ে দমন করা যায়।</li>
+    <li>পোকামাকড় দমনের জন্য কীটনাশক প্রয়োগ দরকার।</li>
+  </ul>
+  
+  <h3>সংগ্রহ</h3>
+  <p>বপনের ৬০-৭০ দিনের মধ্যে ফল সংগ্রহ করা যায়। ফল সতেজ থাকলে বাজারজাত করা হয়।</p>
+</section>
+
+<!-- Snake Gourd -->
+<section id="snake-gourd">
+  <h2>চিচিঙ্গা (Snake Gourd)</h2>
+  <h3>ভূমিকা</h3>
+  <p>চিচিঙ্গা একটি লতা জাতীয় সবজি, যা বাংলাদেশের উপকূলীয় অঞ্চলে বেশ পরিচিত এবং চাহিদাসম্পন্ন।</p>
+  
+  <h3>জলবায়ু ও মাটি</h3>
+  <p>তাপমাত্রা ২৭-৩৫°C এবং মাঝারি থেকে উর্বর বেলে দোআ মাটি বেশি উপযোগী। লবণাক্ত মাটিতেও বংশবিস্তার সম্ভব।</p>
+  
+  <h3>লবণসহনশীল জাত</h3>
+  <ul>
+    <li>বিপি-৩</li>
+    <li>স্থানীয় সংগ্রহ</li>
+  </ul>
+  
+  <h3>বপনের সময়</h3>
+  <p>ফেব্রুয়ারি থেকে জুন মাসে বপন ভালো হয়।</p>
+  
+  <h3>বীজ হার</h3>
+  <p>প্রতি হেক্টরে ১.৫-২ কেজি বীজ ব্যবহার করা হয়।</p>
+  
+  <h3>সার ব্যবস্থাপনা</h3>
+  <ul>
+    <li>সার হিসেবে প্রতি হেক্টরে ১০০ কেজি ইউরিয়া, ৭৫ কেজি সিঙ্গল সুপার ফসফেট, ৫০ কেজি পটাশ দেয়া হয়।</li>
+  </ul>
+  
+  <h3>সেচ</h3>
+  <p>মাটি আর্দ্র রাখতে সেচ দিন সপ্তাহে ২-৩ বার প্রয়োজন।</p>
+  
+  <h3>আগাছা নিয়ন্ত্রণ</h3>
+  <p>হাত দিয়ে আগাছা তোলা এবং মাঝে মাঝে মাটির হালকা নিড়াই করা ভালো।</p>
+  
+  <h3>রোগবালাই ও দমন</h3>
+  <ul>
+    <li>পাতা ঝরা ও ছত্রাকজনিত রোগের জন্য ফাঙ্গিসাইড স্প্রে করতে হবে।</li>
+    <li>পোকার আক্রমণ হলে কীটনাশক প্রয়োগ করতে হবে।</li>
+  </ul>
+  
+  <h3>সংগ্রহ</h3>
+  <p>বপনের ৫০-৬০ দিনের মধ্যে ফল সংগ্রহ করা যায়।</p>
+</section>
+
+<!-- Ridge Gourd -->
+<section id="ridge-gourd">
+  <h2>ঢেঁড়স (Ridge Gourd)</h2>
+  <h3>ভূমিকা</h3>
+  <p>ঢেঁড়স বাংলাদেশের উপকূলীয় অঞ্চলে জনপ্রিয় সবজি, বিশেষ করে গ্রীষ্মকালীন মৌসুমে বেশি চাষ হয়।</p>
+  
+  <h3>জলবায়ু ও মাটি</h3>
+  <p>তাপমাত্রা ২৫-৩৫°C এবং মাঝারি উর্বর বেলে দোআ মাটি উপযোগী। লবণাক্ত মাটিতেও কিছু মাত্রায় উৎপাদন হয়।</p>
+  
+  <h3>লবণসহনশীল জাত</h3>
+  <ul>
+    <li>বিপি-৭</li>
+    <li>স্থানীয় জাত</li>
+  </ul>
+  
+  <h3>বপনের সময়</h3>
+  <p>ফেব্রুয়ারি থেকে মে মাসে বপন করা যায়।</p>
+  
+  <h3>বীজ হার</h3>
+  <p>প্রতি হেক্টরে ২ কেজি বীজ লাগে।</p>
+  
+  <h3>সার ব্যবস্থাপনা</h3>
+  <ul>
+    <li>প্রতি হেক্টরে ১৫০ কেজি ইউরিয়া, ১২০ কেজি সিঙ্গল সুপার ফসফেট, ৮০ কেজি পটাশ ব্যবহার করা হয়।</li>
+  </ul>
+  
+  <h3>সেচ</h3>
+  <p>মাটি শুষ্ক না হওয়ার জন্য সপ্তাহে ৩-৪ বার সেচ দেয়া প্রয়োজন।</p>
+  
+  <h3>আগাছা নিয়ন্ত্রণ</h3>
+  <p>আগাছা মুল থেকে তুলে ফেলতে হবে নিয়মিত।</p>
+  
+  <h3>রোগবালাই ও দমন</h3>
+  <ul>
+    <li>পাতা ঝরা ও ছত্রাকজনিত রোগে ফাঙ্গিসাইড ব্যবহার করা হয়।</li>
+    <li>কীটপতঙ্গ দমনে কীটনাশক প্রয়োগ করতে হবে।</li>
+  </ul>
+  
+  <h3>সংগ্রহ</h3>
+  <p>বপনের ৬০-৭০ দিনের মধ্যে ফল সংগ্রহ করা যায়।</p>
+</section>
+
+<!-- Cauliflower -->
+<section id="cauliflower">
+  <h2>ফুলকপি (Cauliflower)</h2>
+  <h3>ভূমিকা</h3>
+  <p>ফুলকপি বাংলাদেশের উপকূলীয় অঞ্চলে শীতকালে চাষ হয়। এটি পুষ্টিকর এবং উচ্চমূল্যের সবজি।</p>
+  
+  <h3>জলবায়ু ও মাটি</h3>
+  <p>শীতল জলবায়ু ও ভালো পানি নিষ্কাশন ব্যবস্থা সম্পন্ন উর্বর দোআ মাটি ফুলকপির জন্য উপযোগী।</p>
+  
+  <h3>লবণসহনশীল জাত</h3>
+  <ul>
+    <li>বিপি-১০</li>
+    <li>স্থানীয় প্রতিরোধী জাত</li>
+  </ul>
+  
+  <h3>বপনের সময়</h3>
+  <p>অক্টোবর থেকে ডিসেম্বর মাসে বপন করা হয়।</p>
+  
+  <h3>বীজ হার</h3>
+  <p>প্রতি হেক্টরে ০.৫-০.৭ কেজি বীজ প্রয়োজন।</p>
+  
+  <h3>সার ব্যবস্থাপনা</h3>
+  <ul>
+    <li>প্রতি হেক্টরে ১০০ কেজি ইউরিয়া, ১৫০ কেজি সিঙ্গল সুপার ফসফেট, ৮০ কেজি পটাশ প্রয়োগ করা হয়।</li>
+  </ul>
+  
+  <h3>সেচ</h3>
+  <p>শুষ্ক সময়ে নিয়মিত সেচ দিতে হবে, সপ্তাহে ২-৩ বার।</p>
+  
+  <h3>আগাছা নিয়ন্ত্রণ</h3>
+  <p>হালকা হাত দিয়ে আগাছা পরিষ্কার করতে হবে।</p>
+  
+  <h3>রোগবালাই ও দমন</h3>
+  <ul>
+    <li>ছত্রাকজনিত রোগ ফাঙ্গিসাইড দিয়ে নিয়ন্ত্রণ করা হয়।</li>
+    <li>পাতা ক্ষয় রোগের জন্য নিয়মিত নজরদারি প্রয়োজন।</li>
+  </ul>
+  
+  <h3>সংগ্রহ</h3>
+  <p>বপনের ৯০-১০০ দিনের মধ্যে ফুলকপি সংগ্রহ করা যায়।</p>
+</section>
+
+<!-- Cumin -->
+<section id="cumin">
+  <h2>জিরা (Cumin)</h2>
+  <h3>ভূমিকা</h3>
+  <p>জিরা বাংলাদেশের কিছু অঞ্চলে চাষ হয়, যা খাদ্য ও ঔষধি কাজে ব্যবহৃত হয়।</p>
+  
+  <h3>জলবায়ু ও মাটি</h3>
+  <p>শুষ্ক ও আধা শুষ্ক জলবায়ু এবং বেলে দোআ মাটি জিরার জন্য উপযোগী। লবণাক্ত মাটি অল্প সহ্য করে।</p>
+  
+  <h3>লবণসহনশীল জাত</h3>
+  <ul>
+    <li>স্থানীয় জাত</li>
+  </ul>
+  
+  <h3>বপনের সময়</h3>
+  <p>অক্টোবর থেকে নভেম্বর মাসে বপন করা হয়।</p>
+  
+  <h3>বীজ হার</h3>
+  <p>প্রতি হেক্টরে ৪-৫ কেজি বীজ প্রয়োজন।</p>
+  
+  <h3>সার ব্যবস্থাপনা</h3>
+  <ul>
+    <li>প্রতি হেক্টরে ৫০ কেজি ইউরিয়া, ৪০ কেজি সিঙ্গল সুপার ফসফেট প্রয়োগ করা হয়।</li>
+  </ul>
+  
+  <h3>সেচ</h3>
+  <p>মাটি শুষ্ক থাকলে সেচ দিতে হয়, সাধারণত বপনের পরে একবার।</p>
+  
+  <h3>আগাছা নিয়ন্ত্রণ</h3>
+  <p>শস্য বৃদ্ধির শুরুতেই আগাছা পরিষ্কার করতে হবে।</p>
+  
+  <h3>রোগবালাই ও দমন</h3>
+  <ul>
+    <li>প্রধানত ছত্রাকজনিত রোগ দেখা যায়, ফাঙ্গিসাইড প্রয়োগ করা হয়।</li>
+  </ul>
+  
+  <h3>সংগ্রহ</h3>
+  <p>বপনের ৯০-১০০ দিনের মধ্যে ফল সংগ্রহ করা হয়।</p>
+</section>
+
+<!-- Cardamom -->
+<section id="cardamom">
+  <h2>এলাচ (Cardamom)</h2>
+  <h3>ভূমিকা</h3>
+  <p>এলাচ বাংলাদেশের কিছু পাহাড়ি ও উপকূলীয় অঞ্চলে ঔষধি ও মশলা ফসল হিসেবে চাষ হয়।</p>
+  
+  <h3>জলবায়ু ও মাটি</h3>
+  <p>উষ্ণ আর্দ্র জলবায়ু এবং হালকা দোআ মাটি ভালো উপযোগী। লবণাক্ত মাটি এলাচের জন্য ক্ষতিকর।</p>
+  
+  <h3>লবণসহনশীল জাত</h3>
+  <ul>
+    <li>স্থানীয় বংশবৃদ্ধি জাত</li>
+  </ul>
+  
+  <h3>বপনের সময়</h3>
+  <p>বছরের যেকোনো সময় বপন করা যেতে পারে, তবে গ্রীষ্মকাল বেশি উপযোগী।</p>
+  
+  <h3>বীজ হার</h3>
+  <p>প্রতি হেক্টরে ২-৩ কেজি বীজ প্রয়োজন।</p>
+  
+  <h3>সার ব্যবস্থাপনা</h3>
+  <ul>
+    <li>গোবর সার ও রাসায়নিক সার মিশিয়ে প্রয়োগ করতে হয়।</li>
+  </ul>
+  
+  <h3>সেচ</h3>
+  <p>আর্দ্রতা বজায় রাখতে নিয়মিত সেচ দিতে হয়।</p>
+  
+  <h3>আগাছা নিয়ন্ত্রণ</h3>
+  <p>হাত দিয়ে আগাছা পরিষ্কার করতে হবে।</p>
+  
+  <h3>রোগবালাই ও দমন</h3>
+  <ul>
+    <li>ছত্রাকজনিত রোগের জন্য ফাঙ্গিসাইড স্প্রে প্রয়োগ করা হয়।</li>
+  </ul>
+  
+  <h3>সংগ্রহ</h3>
+  <p>বপনের ১০-১২ মাস পর ফল সংগ্রহ করা হয়।</p>
+</section>
+
+<!-- Cinnamon -->
+<section id="cinnamon">
+  <h2>দারুচিনি (Cinnamon)</h2>
+  <h3>ভূমিকা</h3>
+  <p>দারুচিনি বাংলাদেশের উপকূলীয় ও পাহাড়ি অঞ্চলে মশলা হিসেবে চাষ হয়, যা ঔষধি ও সুগন্ধি হিসাবে ব্যবহৃত।</p>
+  
+  <h3>জলবায়ু ও মাটি</h3>
+  <p>উষ্ণ ও আর্দ্র জলবায়ু এবং ভালো পানি নিষ্কাশন সম্পন্ন দোআ মাটি দারুচিনির জন্য উপযোগী।</p>
+  
+  <h3>লবণসহনশীল জাত</h3>
+  <ul>
+    <li>স্থানীয় জাত</li>
+  </ul>
+  
+  <h3>বপনের সময়</h3>
+  <p>গ্রীষ্মকালীন মাসে বপন ভালো হয়।</p>
+  
+  <h3>বীজ হার</h3>
+  <p>প্রতি হেক্টরে ১-২ কেজি বীজ ব্যবহার হয়।</p>
+  
+  <h3>সার ব্যবস্থাপনা</h3>
+  <ul>
+    <li>গোবর সার ও রাসায়নিক সার মিশিয়ে প্রয়োগ করা হয়।</li>
+  </ul>
+  
+  <h3>সেচ</h3>
+  <p>নিয়মিত সেচ দেওয়া প্রয়োজন, বিশেষ করে শুষ্ক মৌসুমে।</p>
+  
+  <h3>আগাছা নিয়ন্ত্রণ</h3>
+  <p>আগাছা পরিষ্কারের জন্য সময়মতো হাত দিয়ে পরিষ্কার করা প্রয়োজন।</p>
+  
+  <h3>রোগবালাই ও দমন</h3>
+  <ul>
+    <li>ছত্রাকজনিত রোগে ফাঙ্গিসাইড প্রয়োগ প্রয়োজন।</li>
+  </ul>
+  
+  <h3>সংগ্রহ</h3>
+  <p>বপনের ১২-১৪ মাস পরে কোরা ছাল সংগ্রহ করা হয়।</p>
+</section>
+
 </body>
 </html>
