--- a/index.html
+++ b/index.html
@@ -33,9 +33,16 @@
 
 <!-- Cucumber -->
 <section id="cucumber">
-  <h2>কাকরোল (Cucumber)</h2>
-  <h3>ভূমিকা</h3>
-  <p>কাকরোল বাংলাদেশের উপকূলীয় এলাকায় গুরুত্বপূর্ণ সবজি হিসেবে চাষ হয়। এটি খাদ্য হিসেবে পুষ্টিকর এবং অর্থনৈতিকভাবে লাভজনক।</p>
+  <h2 style="color: orange;">শসা (Cucumber)</h2>
+  <h3>কেন চাষ করবেন?</h3>
+  <p>কম সময়ে (৪৫-৬০ দিনে) ফলন দেয় এবং বারবার তোলা যায়।
+
+উৎপাদন খরচ কম, লাভ বেশি।
+
+সব সময় বাজারে চাহিদা থাকে।
+
+অল্প জমিতে ও স্বল্প পরিচর্যায় চাষ করা যায়।</p> 
+<img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.agrifarming.in%2Fcucumber-farming&psig=AOvVaw0xKBxx3y5GPyY9G2jntMVO&ust=1752003701041000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCJD82NXAq44DFQAAAAAdAAAAABAE" alt="">
   
   <h3>জলবায়ু ও মাটি</h3>
   <p>কাকরোল ভালো জন্মে তাপমাত্রা ২৫-৩৫°C এবং মাঝারি থেকে উর্বর বেলে দোআ মাটিতে। উপকূলীয় অঞ্চলের লবণাক্ত মাটিতেও কিছু লবণসহনশীল জাত সফল।</p>
@@ -76,8 +83,8 @@
 
 <!-- Pointed Gourd -->
 <section id="pointed-gourd">
-  <h2>শিম (Pointed Gourd)</h2>
-  <h3>ভূমিকা</h3>
+  <h2 style="display: flow-root;">শিম (Pointed Gourd)</h2>
+  <h3>কেন চাষ করবেন?</h3>
   <p>শিম বা pointed gourd হলো বাংলাদেশের উপকূলীয় অঞ্চলে জনপ্রিয় একটি লতা জাতীয় সবজি, যা প্রচুর খাওয়া হয়।</p>
   
   <h3>জলবায়ু ও মাটি</h3>
@@ -160,7 +167,7 @@
 
 <!-- Ridge Gourd -->
 <section id="ridge-gourd">
-  <h2>ঢেঁড়স (Ridge Gourd)</h2>
+  <h2  style="color: chartreuse;">ঢেঁড়স (Ridge Gourd)</h2>
   <h3>ভূমিকা</h3>
   <p>ঢেঁড়স বাংলাদেশের উপকূলীয় অঞ্চলে জনপ্রিয় সবজি, বিশেষ করে গ্রীষ্মকালীন মৌসুমে বেশি চাষ হয়।</p>
   
@@ -202,7 +209,7 @@
 
 <!-- Cauliflower -->
 <section id="cauliflower">
-  <h2>ফুলকপি (Cauliflower)</h2>
+  <h2  style="color: chartreuse;">ফুলকপি (Cauliflower)</h2>
   <h3>ভূমিকা</h3>
   <p>ফুলকপি বাংলাদেশের উপকূলীয় অঞ্চলে শীতকালে চাষ হয়। এটি পুষ্টিকর এবং উচ্চমূল্যের সবজি।</p>
   
@@ -244,7 +251,7 @@
 
 <!-- Cumin -->
 <section id="cumin">
-  <h2>জিরা (Cumin)</h2>
+  <h2  style="color: chartreuse;">জিরা (Cumin)</h2>
   <h3>ভূমিকা</h3>
   <p>জিরা বাংলাদেশের কিছু অঞ্চলে চাষ হয়, যা খাদ্য ও ঔষধি কাজে ব্যবহৃত হয়।</p>
   
@@ -284,7 +291,7 @@
 
 <!-- Cardamom -->
 <section id="cardamom">
-  <h2>এলাচ (Cardamom)</h2>
+  <h2  style="color: chartreuse;">এলাচ (Cardamom)</h2>
   <h3>ভূমিকা</h3>
   <p>এলাচ বাংলাদেশের কিছু পাহাড়ি ও উপকূলীয় অঞ্চলে ঔষধি ও মশলা ফসল হিসেবে চাষ হয়।</p>
   
@@ -324,7 +331,7 @@
 
 <!-- Cinnamon -->
 <section id="cinnamon">
-  <h2>দারুচিনি (Cinnamon)</h2>
+  <h2  style="color: chartreuse;">দারুচিনি (Cinnamon)</h2>
   <h3>ভূমিকা</h3>
   <p>দারুচিনি বাংলাদেশের উপকূলীয় ও পাহাড়ি অঞ্চলে মশলা হিসেবে চাষ হয়, যা ঔষধি ও সুগন্ধি হিসাবে ব্যবহৃত।</p>
   
