--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>কোস্টাল এলাকার সবজি ও মশলা উৎপাদন প্রযুক্তি</title>
+<title>কৃষকের সঙ্গী</title>
 <style>
   body {
     font-family: 'SolaimanLipi', Arial, sans-serif;
@@ -29,56 +29,88 @@
 </head>
 <body>
 
-<h1>কোস্টাল অঞ্চলের সবজি ও মশলা চাষের প্রযুক্তি (বাংলাদেশ)</h1>
+<h1>কৃষকের সঙ্গী</h1>
 
 <!-- Cucumber -->
 <section id="cucumber">
   <h2 style="color: orange;">শসা (Cucumber)</h2>
   <h3>কেন চাষ করবেন?</h3>
-  <p>কম সময়ে (৪৫-৬০ দিনে) ফলন দেয় এবং বারবার তোলা যায়।
-
-উৎপাদন খরচ কম, লাভ বেশি।
-
-সব সময় বাজারে চাহিদা থাকে।
-
-অল্প জমিতে ও স্বল্প পরিচর্যায় চাষ করা যায়।</p> 
+  <ul>
+    <li>স্বল্প সময়ে ফলন দেয়।</li>
+    <li>কম খরচে অধিক লাভবান হওয়া যায়।</li>
+    <li>সহজ পরিচর্যা</li>
+    <li>উপকূলীয় এলাকার পরিবেশ উপযোগী</li>
+    </ul> 
 <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.agrifarming.in%2Fcucumber-farming&psig=AOvVaw0xKBxx3y5GPyY9G2jntMVO&ust=1752003701041000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCJD82NXAq44DFQAAAAAdAAAAABAE" alt="">
   
-  <h3>জলবায়ু ও মাটি</h3>
-  <p>কাকরোল ভালো জন্মে তাপমাত্রা ২৫-৩৫°C এবং মাঝারি থেকে উর্বর বেলে দোআ মাটিতে। উপকূলীয় অঞ্চলের লবণাক্ত মাটিতেও কিছু লবণসহনশীল জাত সফল।</p>
-  
-  <h3>লবণসহনশীল জাত</h3>
+  <h3>🌍উপযুক্ত পরিবেশ</h3>
   <ul>
-    <li>সিসিপি-২</li>
-    <li>বিপি-১</li>
+    <li>জলবায়ু: উষ্ণ ও আর্দ্র জলবায়ুতে ভালো জন্মায়</li>
+    <li>তাপমাত্রা: আদর্শ তাপমাত্রা ২৫-৩৫ ডিগ্রি সেলসিয়াস।</li>
+    <li>মাটি:দোআঁশ বা বেলে দোআঁশ মাটি এবং pH ৬-৭ হলে সবচেয়ে উপযোগী।</li>
+    </ul>
+  
+  <h3>🌱 লবণসহনশীল জাত</h3>
+  <ul>
+    <li>BARI Shosha-2 (বারি শসা-২)</li>
+    <li>Green Long F1 Hybrid</li>
   </ul>
   
-  <h3>বপনের সময়</h3>
-  <p>মার্চ থেকে জুন মাসের মধ্যে বপন করা যায়।</p>
-  
-  <h3>বীজ হার</h3>
-  <p>প্রতি হেক্টরে ১.৫ - ২ কেজি বীজ ব্যবহার করা হয়।</p>
-  
-  <h3>সার ব্যবস্থাপনা</h3>
+  <h3>📅 বপনের সময়</h3>
   <ul>
-    <li>সাধারণত প্রতি হেক্টরে ১৫০ কেজি ইউরিয়া, ১০০ কেজি সিঙ্গল সুপার ফসফেট, ১২০ কেজি পটাশ ব্যবহার করা হয়।</li>
-    <li>খালে মিশিয়ে দেয়া হয় সারের ৫০% ইউরিয়া বাকি বীজ বপনের পরে।</li>
-  </ul>
+    <li>রবি মৌসুম: নভেম্বর - জানুয়ারি।</li>
+    <li>খরিফ মৌসুম: ফেব্রুয়ারি - মার্চ (বৃষ্টি না হলে সেচ দিতে হয়)।</li>
+    </ul>
   
-  <h3>সেচ</h3>
-  <p>প্রতিদিন নিয়মিত হালকা সেচ প্রয়োজন, বিশেষ করে শারদকালীন সময়ে।</p>
-  
-  <h3>আগাছা নিয়ন্ত্রণ</h3>
-  <p>বপনের ২০-৩০ দিনের মধ্যে আগাছা পরিষ্কার করতে হয়। আগাছা ব্যবস্থাপনায় হাল খোঁড়া ও মুলপতাগুলো পরিষ্কার করা উচিত।</p>
-  
-  <h3>রোগবালাই ও দমন</h3>
+  <h3>🌾 বীজ হার</h3>
   <ul>
-    <li>পোকার আক্রমণ বেশি থাকে; কীটনাশক প্রয়োগ করা প্রয়োজন।</li>
-    <li>ছত্রাকজনিত রোগের জন্য ফফুন্দরী (ফাঙ্গিসাইড) স্প্রে দিতে হবে।</li>
-  </ul>
+    <li>প্রতি হেক্টরে প্রায় ২-৩ কেজি বীজ প্রয়োজন হয়।</li>
+    </ul>
   
-  <h3>সংগ্রহ</h3>
-  <p>বপনের ৫০-৬০ দিনের মধ্যে ফল সংগ্রহ করা যায়। পাকা কাকরোলকে যত তাড়াতাড়ি সম্ভব তোলা উচিত যেন তাজা থাকে।</p>
+  <h3>🧪 সার ব্যবস্থাপনা (হেক্টরপ্রতি)</h3>
+  <ul>
+    <li>গোবর: ১০-১৫ টন</li>
+    <li>ইউরিয়া: ২৫০ কেজি</li>
+    <li>টিএসপি: ১৫০ কেজি</li>
+    <li>এমওপি: ১০০ কেজি</li>
+    <li>জমি তৈরির সময় অর্ধেক
+          বাকি অর্ধেক ২০-২৫ দিনের মাথায়</li>
+    </ul>
+  
+  <h3>💧 সেচ</h3>
+  <ul>
+    <li>৭-১০ দিন পরপর হালকা সেচ দিন।</li>
+    <li>ফুল ও ফল আসার সময় বিশেষভাবে সেচ জরুরি।</li>
+    </ul>
+  
+  <h3>🌿 আগাছা নিয়ন্ত্রণ</h3>
+ <ul>
+    <li>চারা গজানোর ১৫-২০ দিন পর আগাছা নিড়ানির মাধ্যমে তুলে ফেলুন।</li>
+    <li>প্রয়োজনে মালচিং ব্যবহার করা যেতে পারে।</li>
+    </ul>
+  
+  <h3>🐛 রোগ ও পোকার নাম এবং প্রতিকার</h3>
+  <ul>
+    <li>১. ডাউনি মিলডিউ (পাতা পচা রোগ):
+          লক্ষণ: পাতায় হলুদ দাগ, পরে বাদামী হয়ে মারা যায়।
+          প্রতিকার: রিডোমিল গোল্ড বা ম্যানকোজেব প্রয়োগ (৭-১০ দিন অন্তর)।</li>
+    <li>২. পাউডারি মিলডিউ (সাদা গুড়া রোগ):*
+          লক্ষণ: পাতার উপর সাদা ধূলির মতো।
+          প্রতিকার: টপাস বা ব্যাভিস্টিন প্রয়োগ।</li>
+    <li>৩. ফল পচা/মোল্ড রোগ:*
+         ফলের উপর ছত্রাক বা পচা দাগ।
+         প্রতিকার: কপার অক্সিক্লোরাইড স্প্রে।</li>
+    <li>৪. লিফ মাইনার পোকা:*
+         পাতার ভেতরে সাদা আঁকাবাঁকা দাগ।
+         প্রতিকার: সাইপারমেথ্রিন স্প্রে।</li>
+    </ul>
+  
+  <h3>🧺 সংগ্রহ</h3>
+   <ul>
+    <li>বপনের ৪৫-৬০ দিন পর ফল সংগ্রহ শুরু হয়।</li>
+    <li>প্রতি ২-৩ দিন পরপর পরিপক্ব শসা তুলে ফেলুন।</li>
+    <li>খুব বেশি বড় হয়ে গেলে বাজারমূল্য কমে যায়।</li>
+    </ul>
 </section>
 
 <!-- Pointed Gourd -->
