--- a/index.html
+++ b/index.html
@@ -27,6 +27,19 @@
   }
 </style>
 </head>
+<!-- 🌤 Weather Widget Start -->
+<a class="weatherwidget-io" href="https://forecast7.com/en/22d8271d10/noakhali/" 
+data-label_1="Noakhali" data-label_2="Weather" data-theme="pure">Noakhali Weather</a>
+<script>
+!function(d,s,id){
+  var js,fjs=d.getElementsByTagName(s)[0];
+  if(!d.getElementById(id)){
+    js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';
+    fjs.parentNode.insertBefore(js,fjs);
+  }
+}(document,'script','weatherwidget-io-js');
+</script>
+<!-- 🌤 Weather Widget End -->
 <body>
 
 <h1>কৃষকের সঙ্গী</h1>
