--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <section id="cucumber">
   <h2 style="color: orange;">শসা (Cucumber)</h2>
   <h3>কেন চাষ করবেন?</h3>
-    <li>স্বল্প সময়ে ফলন দেয়। <img src="https://images.app.goo.gl/xXNw4Fy4dw3jLiwX6" alt=""></li>
+    <li>স্বল্প সময়ে ফলন দেয়। <img src="C:\Users\HP\OneDrive\Desktop\.git" alt="why"></li>
     <li>কম খরচে অধিক লাভবান হওয়া যায়।</li>
     <li>সহজ পরিচর্যা</li>
     <li>উপকূলীয় এলাকার পরিবেশ উপযোগী</li>
