--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>এগ্রি ১৭তম আবর্তন</title>
-  <style>
+   <style>
     body {
       font-family: 'SolaimanLipi', Arial, sans-serif;
       line-height: 1.6;
@@ -161,7 +161,7 @@
 }
   </style>
 </head>
-<body>
+
 
 <!-- Sidebar Navigation -->
 <div class="sidebar">
@@ -174,32 +174,22 @@
   <a href="#cumin">🧂 জিরা</a>
   <a href="#cardamom">🌿 এলাচ</a>
   <a href="#cinnamon">🌳 দারুচিনি</a>
+  <a href="#crop-calendar">📅 চাষ ক্যালেন্ডার</a>
 </div>
 
 <!-- শিরোনাম -->
 <h1 style="text-align:center; padding-top: 20px;">এগ্রি ১৭তম আবর্তন</h1>
-<!-- 🔴 এখানে Weather Widget বসাও -->
-<div class="weather-widget">
-  <h3>📍 আজকের আবহাওয়া</h3>
-  <div><strong id="weather-location">অবস্থান:</strong> <span>লোড হচ্ছে...</span></div>
-  <div><strong>তাপমাত্রা:</strong> <span id="weather-temp">--°C</span></div>
-  <div><strong>অনুভূত তাপমাত্রা:</strong> <span id="weather-feels">--°C</span></div>
-  <div><strong>আবহাওয়া:</strong> <span id="weather-condition">--</span> <img id="weather-icon" src="" alt="" style="height: 30px;"></div>
-  <div><strong>আর্দ্রতা:</strong> <span id="weather-humidity">--%</span></div>
-  <div><strong>বাতাস:</strong> <span id="weather-wind">-- কিমি/ঘণ্টা</span></div>
-  <div><strong>বৃষ্টিপাত:</strong> <span id="weather-rain">-- mm</span></div>
-  <div><strong>UV ইনডেক্স:</strong> <span id="weather-uv">--</span></div>
-  <div><strong>আপডেট সময়:</strong> <span id="weather-time">--</span></div>
-</div>
 <!-- Cucumber -->
 <section id="cucumber">
   <h2 style="color: orange;">শসা (Cucumber)</h2>
+  <button onclick="speakText('cucumber')" style="padding:5px 10px; margin-bottom:10px;">🔊 টেক্সট শুনুন</button>
   <h3>কেন চাষ করবেন?</h3>
     <li>স্বল্প সময়ে ফলন দেয়। <img src="C:\Users\HP\OneDrive\Desktop\.git" alt="why"></li>
     <li>কম খরচে অধিক লাভবান হওয়া যায়।</li>
     <li>সহজ পরিচর্যা</li>
     <li>উপকূলীয় এলাকার পরিবেশ উপযোগী</li>
     </ul> 
+    <img src="images (1).jpeg" alt="শসা">
 
   <h3>🌍উপযুক্ত পরিবেশ</h3>
   <ul>
@@ -273,8 +263,9 @@
 </section>
 
 <!-- Pointed Gourd -->
-<section id="pointed-gourd">
+  <section id="pointed-gourd">
   <h2 style="display: flow-root;">শিম (Pointed Gourd)</h2>
+  <button onclick="speakText('pointed-gourd')" style="padding:5px 10px; margin-bottom:10px;">🔊 টেক্সট শুনুন</button>
   <h3>কেন চাষ করবেন?</h3>
   <p>শিম বা pointed gourd হলো বাংলাদেশের উপকূলীয় অঞ্চলে জনপ্রিয় একটি লতা জাতীয় সবজি, যা প্রচুর খাওয়া হয়।</p>
   
@@ -316,6 +307,7 @@
 <!-- Snake Gourd -->
 <section id="snake-gourd">
   <h2>চিচিঙ্গা (Snake Gourd)</h2>
+  <button onclick="speakText('snake-gourd')" style="padding:5px 10px; margin-bottom:10px;">🔊 টেক্সট শুনুন</button>
   <h3>ভূমিকা</h3>
   <p>চিচিঙ্গা একটি লতা জাতীয় সবজি, যা বাংলাদেশের উপকূলীয় অঞ্চলে বেশ পরিচিত এবং চাহিদাসম্পন্ন।</p>
   
@@ -358,6 +350,7 @@
 <!-- Ridge Gourd -->
 <section id="ridge-gourd">
   <h2  style="color: chartreuse;">ঢেঁড়স (Ridge Gourd)</h2>
+  <button onclick="speakText('ridge-gourd')" style="padding:5px 10px; margin-bottom:10px;">🔊 টেক্সট শুনুন</button>
   <h3>ভূমিকা</h3>
   <p>ঢেঁড়স বাংলাদেশের উপকূলীয় অঞ্চলে জনপ্রিয় সবজি, বিশেষ করে গ্রীষ্মকালীন মৌসুমে বেশি চাষ হয়।</p>
   
@@ -400,6 +393,7 @@
 <!-- Cauliflower -->
 <section id="cauliflower">
   <h2  style="color: chartreuse;">ফুলকপি (Cauliflower)</h2>
+  <button onclick="speakText('cauliflower')" style="padding:5px 10px; margin-bottom:10px;">🔊 টেক্সট শুনুন</button>
   <h3>ভূমিকা</h3>
   <p>ফুলকপি বাংলাদেশের উপকূলীয় অঞ্চলে শীতকালে চাষ হয়। এটি পুষ্টিকর এবং উচ্চমূল্যের সবজি।</p>
   
@@ -442,6 +436,7 @@
 <!-- Cumin -->
 <section id="cumin">
   <h2  style="color: chartreuse;">জিরা (Cumin)</h2>
+   <button onclick="speakText('cumin')" style="padding:5px 10px; margin-bottom:10px;">🔊 টেক্সট শুনুন</button>
   <h3>ভূমিকা</h3>
   <p>জিরা বাংলাদেশের কিছু অঞ্চলে চাষ হয়, যা খাদ্য ও ঔষধি কাজে ব্যবহৃত হয়।</p>
   
@@ -481,6 +476,7 @@
 <!-- Cardamom -->
 <section id="cardamom">
   <h2  style="color: chartreuse;">এলাচ (Cardamom)</h2>
+   <button onclick="speakText('cardamom')" style="padding:5px 10px; margin-bottom:10px;">🔊 টেক্সট শুনুন</button>
   <h3>ভূমিকা</h3>
   <p>এলাচ বাংলাদেশের কিছু পাহাড়ি ও উপকূলীয় অঞ্চলে ঔষধি ও মশলা ফসল হিসেবে চাষ হয়।</p>
   
@@ -521,6 +517,7 @@
 <!-- Cinnamon -->
 <section id="cinnamon">
   <h2  style="color: chartreuse;">দারুচিনি (Cinnamon)</h2>
+  <button onclick="speakText('cinnamon')" style="padding:5px 10px; margin-bottom:10px;">🔊 টেক্সট শুনুন</button>
   <h3>ভূমিকা</h3>
   <p>দারুচিনি বাংলাদেশের উপকূলীয় ও পাহাড়ি অঞ্চলে মশলা হিসেবে চাষ হয়, যা ঔষধি ও সুগন্ধি হিসাবে ব্যবহৃত।</p>
   
@@ -556,48 +553,106 @@
   <h3>সংগ্রহ</h3>
   <p>বপনের ১২-১৪ মাস পরে কোরা ছাল সংগ্রহ করা হয়।</p>
 </section>
+<!-- Crop Calendar Section -->
+<section id="crop-calendar" style="margin: 30px;">
+  <h2 style="color: green;">📅 চাষ ক্যালেন্ডার (শুধু নির্বাচিত ফসলের জন্য)</h2>
+  <table border="1" cellpadding="8" cellspacing="0" style="width: 100%; border-collapse: collapse; text-align: center;">
+    <thead style="background-color: #c8f7c5;">
+      <tr>
+        <th>ফসল</th>
+        <th>বপনের সময়</th>
+        <th>পরিচর্যা</th>
+        <th>সংগ্রহ</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>শসা</td>
+        <td>নভেম্বর - জানুয়ারি (রবি)<br>ফেব্রুয়ারি - মার্চ (খরিফ)</td>
+        <td>ডিসেম্বর - এপ্রিল</td>
+        <td>বপনের ৪৫-৬০ দিন পর (জানুয়ারি-জুন)</td>
+      </tr>
+      <tr>
+        <td>শিম</td>
+        <td>মার্চ - জুলাই</td>
+        <td>এপ্রিল - আগস্ট</td>
+        <td>৬০-৭০ দিন পর (মে - সেপ্টেম্বর)</td>
+      </tr>
+      <tr>
+        <td>চিচিঙ্গা</td>
+        <td>ফেব্রুয়ারি - জুন</td>
+        <td>মার্চ - আগস্ট</td>
+        <td>৫০-৬০ দিন পর (এপ্রিল - আগস্ট)</td>
+      </tr>
+      <tr>
+        <td>ঢেঁড়স</td>
+        <td>ফেব্রুয়ারি - মে</td>
+        <td>মার্চ - জুন</td>
+        <td>৬০-৭০ দিন পর (এপ্রিল - জুলাই)</td>
+      </tr>
+      <tr>
+        <td>ফুলকপি</td>
+        <td>অক্টোবর - ডিসেম্বর</td>
+        <td>নভেম্বর - জানুয়ারি</td>
+        <td>৯০-১০০ দিন পর (জানুয়ারি - মার্চ)</td>
+      </tr>
+      <tr>
+        <td>জিরা</td>
+        <td>অক্টোবর - নভেম্বর</td>
+        <td>নভেম্বর - জানুয়ারি</td>
+        <td>৯০-১০০ দিন পর (ফেব্রুয়ারি - মার্চ)</td>
+      </tr>
+      <tr>
+        <td>এলাচ</td>
+        <td>বছরের যেকোনো সময় (বিশেষত গ্রীষ্মকাল)</td>
+        <td>চারা লাগানোর পর বছরব্যাপী</td>
+        <td>১০-১২ মাস পর (সারা বছর)</td>
+      </tr>
+      <tr>
+        <td>দারুচিনি</td>
+        <td>গ্রীষ্মকাল (মার্চ - মে)</td>
+        <td>চারা লাগানোর পর নিয়মিত সেচ ও পরিচর্যা</td>
+        <td>১২-১৪ মাস পর (পরবর্তী বছর)</td>
+      </tr>
+    </tbody>
+  </table>
+</section>
 <script>
-  const apiKey = 'c20d8bda864e4faab3d171924250807'; // ← এখানে তোমার API Key বসাও
+  let currentUtterance = null; // গ্লোবাল ভ্যারিয়েবল
 
-  function updateWeather(data) {
-    document.getElementById('weather-location').nextElementSibling.textContent = ${data.location.name}, ${data.location.country};
-    document.getElementById('weather-temp').textContent = ${data.current.temp_c}°C;
-    document.getElementById('weather-feels').textContent = ${data.current.feelslike_c}°C;
-    document.getElementById('weather-condition').textContent = data.current.condition.text;
-    document.getElementById('weather-icon').src = "https:" + data.current.condition.icon;
-    document.getElementById('weather-humidity').textContent = data.current.humidity + "%";
-    document.getElementById('weather-wind').textContent = data.current.wind_kph + " কিমি/ঘণ্টা";
-    document.getElementById('weather-rain').textContent = data.current.precip_mm + " mm";
-    document.getElementById('weather-uv').textContent = data.current.uv;
-    document.getElementById('weather-time').textContent = data.current.last_updated;
-  }
+  function speakText(id) {
+    // আগের স্পিচ বন্ধ করা থাকলে, তা থামাও
+    if (window.speechSynthesis.speaking) {
+      window.speechSynthesis.cancel();
+      currentUtterance = null;
+      return; // বন্ধ করে ফেলা হয়েছে
+    }
 
-  function fetchWeather(lat, lon) {
-    const url = https://api.weatherapi.com/v1/current.json?key=${apiKey}&q=${lat},${lon}&lang=bn;
-    fetch(url)
-      .then(response => response.json())
-      .then(data => updateWeather(data))
-      .catch(error => {
-        console.error('ডেটা লোড করতে সমস্যা হয়েছে:', error);
-        document.getElementById('weather-location').nextElementSibling.textContent = "লোড ব্যর্থ!";
-      });
-  }
+    const section = document.getElementById(id);
+    if (section) {
+      const text = section.innerText;
+      const utterance = new SpeechSynthesisUtterance(text);
 
-  if (navigator.geolocation) {
-    navigator.geolocation.getCurrentPosition(
-      (position) => {
-        const lat = position.coords.latitude;
-        const lon = position.coords.longitude;
-        fetchWeather(lat, lon);
-      },
-      (error) => {
-        console.warn("লোকেশন পাওয়া যায়নি, ডিফল্ট 'Dhaka' ব্যবহার করা হচ্ছে");
-        fetchWeather("Dhaka", "Bangladesh");
+      // ✅ বাংলায় পড়ার জন্য বাংলা ভাষা সেটিং
+      utterance.lang = 'bn-BD';
+
+      // কিছু ডিভাইসে বাংলায় সমস্যা হয়, fallback হিসেবে Google TTS বা Android voice try করবে
+      const voices = window.speechSynthesis.getVoices();
+      const banglaVoice = voices.find(v => v.lang === 'bn-BD' || v.name.includes('Bangla') || v.name.includes('বাংলা'));
+      if (banglaVoice) {
+        utterance.voice = banglaVoice;
       }
-    );
-  } else {
-    fetchWeather("Dhaka", "Bangladesh");
+
+      utterance.rate = 1;
+      utterance.pitch = 1;
+      currentUtterance = utterance;
+
+      window.speechSynthesis.speak(utterance);
+    }
   }
+
+  // কিছু ব্রাউজারে getVoices() async, তাই voice লোডে wait করতে হয়
+  window.speechSynthesis.onvoiceschanged = () => {};
 </script>
 </body>
 </html>
